@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-09T02:05:00Z",
+  "timestamp" : "2025-11-11T02:02:20Z",
   "count_outdated" : 268,
   "uniques_outdated" : 201,
-  "count" : 271,
-  "uniques" : 204,
+  "count" : 272,
+  "uniques" : 205,
   "clones" : [
     {
       "timestamp": "2025-10-30T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-11-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
